fix main-nav visibility for mobile

--- a/app/blocks/develop/main-nav-list/main-nav-list.scss
+++ b/app/blocks/develop/main-nav-list/main-nav-list.scss
@@ -6,37 +6,29 @@
   @include list-unstyled;
 
   @include media-breakpoint-down(sm) {
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
-    opacity: 0;
-  }
-
-  &--phone {
     position: absolute;
-    top: calc(48px - 15px);
+    top: 0;
     display: block;
     width: 100%;
     height: initial;
     margin: 0;
     padding: 0;
+    text-align: center;
     background-color: $body-bg;
-    border-top: 1px solid #c1c2ca;
     opacity: 1;
     transition-duration: 1s;
     transition-property: opacity;
 
+    &--hidden {
+      width: 1px;
+      height: 1px;
+      overflow: hidden;
+      opacity: 0;
+    }
+
     #{$root}__item {
       margin: 0;
       padding: 15px;
-      border-right: 1px solid #c1c2ca;
-      border-bottom: 1px solid #c1c2ca;
-      border-left: 1px solid #c1c2ca;
-
-      &:last-of-type {
-        border-bottom-right-radius: 4px;
-        border-bottom-left-radius: 4px;
-      }
     }
   }
 
