--- a/app/blocks/develop/main-nav/main-nav.scss
+++ b/app/blocks/develop/main-nav/main-nav.scss
@@ -34,6 +34,7 @@
     transition-duration: 0.3s;
     transition-property: stroke;
     stroke: $body-color;
+    z-index: 5;
 
     @include media-breakpoint-down(sm) {
       display: flex;
